--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NPJS App",
-  "name": "NPJS App",
+  "short_name": "Ssebulibas",
+  "name": "Ssebulibas",
   "icons": [
     {
       "src": "favicon.ico",
